--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.7",
     "netlify-lambda": "^2.0.6",
-    "serverless-http": "^2.7.0"
+    "serverless-http": "^2.7.0",
+    "socket.io": "^4.1.3"
   }
 }
